# research-assistant-mcp

./: .gitignore  README.md  pyproject.toml
src/research_assistant_mcp/: __init__.py  server.py
