[project]
name = "research-assistant-mcp-mdmehranabul"
version = "0.1.2"
description = "A Model Context Protocol server for research assistance with ChromaDB vector storage"
readme = "README.md"
requires-python = ">=3.11"
authors=[
    {name = "Md Mehran Abul", email = "mehranabul@gmail.com"}
]
keywords = ["mcp","research","chromadb","vector-database","ai","langchain"]
classifiers =[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "matplotlib>=3.10.9",
    "mcp-use[search]>=1.7.0",
    "mcp[cli]>=1.27.0",
    "numpy>=2.4.4",
    "openai>=2.43.0",
    "pandas>=3.0.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "twine>=6.2.0",
    "yahoo-finance-mcp-server>=0.1.2",
]

[project.urls]
Homepage = "https://github.com/mdmehranabul/research-assistant-mcp"
Repository = "https://github.com/mdmehranabul/research-assistant-mcp" 
Issues = "https://github.com/mdmehranabul/research-assistant-mcp"

[project.scripts]
research-assistant-mcp = "research_assistant_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_assistant_mcp"]
